[gd_scene load_steps=13 format=2]

[ext_resource path="res://Imported resources/Numbers/1Gdot.png" type="Texture" id=1]
[ext_resource path="res://Imported resources/Numbers/2Grey-3.png.png" type="Texture" id=2]
[ext_resource path="res://LevelSelect.gd" type="Script" id=3]
[ext_resource path="res://Imported resources/Numbers/2White.png" type="Texture" id=4]
[ext_resource path="res://Imported resources/Numbers/3White.png" type="Texture" id=5]
[ext_resource path="res://Imported resources/Numbers/2Grey-1.png.png" type="Texture" id=6]
[ext_resource path="res://Imported resources/Numbers/2Grey-2.png.png" type="Texture" id=7]
[ext_resource path="res://Imported resources/Numbers/4White.png" type="Texture" id=8]
[ext_resource path="res://Imported resources/Numbers/5White.png" type="Texture" id=9]
[ext_resource path="res://Imported resources/Numbers/2Grey-4.png.png" type="Texture" id=10]
[ext_resource path="res://Imported resources/Numbers/2Grey-5.png.png" type="Texture" id=11]
[ext_resource path="res://Imported resources/Lock-1.png (2).png" type="Texture" id=12]

[node name="Background" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0.227451, 0.219608 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level Select" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LVLRows" type="VBoxContainer" parent="Level Select"]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0

[node name="LVL1-5" type="HBoxContainer" parent="Level Select/LVLRows"]
margin_right = 784.0
margin_bottom = 45.0

[node name="LVL1" type="TextureButton" parent="Level Select/LVLRows/LVL1-5"]
margin_right = 55.0
margin_bottom = 45.0
disabled = true
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 1 )

[node name="LVL2" type="TextureButton" parent="Level Select/LVLRows/LVL1-5"]
margin_left = 59.0
margin_right = 114.0
margin_bottom = 45.0
disabled = true
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 12 )

[node name="LVL3" type="TextureButton" parent="Level Select/LVLRows/LVL1-5"]
margin_left = 118.0
margin_right = 173.0
margin_bottom = 45.0
disabled = true
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 12 )

[node name="LVL4" type="TextureButton" parent="Level Select/LVLRows/LVL1-5"]
margin_left = 177.0
margin_right = 232.0
margin_bottom = 45.0
disabled = true
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 12 )

[node name="LVL5" type="TextureButton" parent="Level Select/LVLRows/LVL1-5"]
margin_left = 236.0
margin_right = 291.0
margin_bottom = 45.0
disabled = true
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 12 )

[node name="LVL6-10" type="HBoxContainer" parent="Level Select/LVLRows"]
margin_top = 49.0
margin_right = 784.0
margin_bottom = 49.0

[node name="LVL11-15" type="HBoxContainer" parent="Level Select/LVLRows"]
margin_top = 53.0
margin_right = 784.0
margin_bottom = 53.0

[connection signal="pressed" from="Level Select/LVLRows/LVL1-5/LVL1" to="." method="_on_LVL1_pressed"]
[connection signal="pressed" from="Level Select/LVLRows/LVL1-5/LVL2" to="." method="_on_LVL2_pressed"]
[connection signal="pressed" from="Level Select/LVLRows/LVL1-5/LVL3" to="." method="_on_LVL3_pressed"]
[connection signal="pressed" from="Level Select/LVLRows/LVL1-5/LVL4" to="." method="_on_LVL4_pressed"]
[connection signal="pressed" from="Level Select/LVLRows/LVL1-5/LVL5" to="." method="_on_LVL5_pressed"]
